@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-04-12T01:16:24Z",
+  "timestamp" : "2025-04-13T02:45:25Z",
   "count_outdated" : 1815,
   "uniques_outdated" : 1056,
-  "count" : 1826,
-  "uniques" : 1067,
+  "count" : 1827,
+  "uniques" : 1068,
   "clones" : [
     {
       "timestamp": "2025-04-01T00:00:00Z",
@@ -88,6 +88,15 @@
     },
     {
       "timestamp": "2025-04-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-04-12T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
